--- a/CSE_360_PROJECT/src/admin_Instructor/Delete_Instructorfromgroup.fxml
+++ b/CSE_360_PROJECT/src/admin_Instructor/Delete_Instructorfromgroup.fxml
@@ -5,9 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="412.0" prefWidth="412.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="remove_instructor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="412.0" prefWidth="412.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="39.0" layoutY="31.0" prefHeight="33.0" prefWidth="334.0" text="Delete Instructor from Group">
          <font>
@@ -28,5 +26,3 @@
       <TextField fx:id="Instructor_group" layoutX="164.0" layoutY="262.0" prefHeight="36.0" prefWidth="220.0" promptText="Ex: Math" />
    </children>
 </AnchorPane>
-
-
