--- a/CSE_360_PROJECT/src/AdminPage/GUI.fxml
+++ b/CSE_360_PROJECT/src/AdminPage/GUI.fxml
@@ -6,70 +6,64 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-
-
-
-
-
-<AnchorPane fx:id="scenePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="421.0" prefWidth="509.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AdminPage.AdminPageController">
+<AnchorPane fx:id="scenePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="604.0" prefWidth="814.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AdminPage.AdminPageController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#dceb37" height="212.0" layoutX="-56.0" layoutY="-56.0" stroke="BLACK" strokeType="INSIDE" width="594.0" />
-      <Button fx:id="logoutbutton" layoutX="160.0" layoutY="382.0" mnemonicParsing="false" onAction="#logout" prefHeight="13.0" prefWidth="189.0" text="Logout" />
-      <Button fx:id="Reset" layoutX="368.0" layoutY="382.0" mnemonicParsing="false" onAction="#ResetUser" prefHeight="25.0" prefWidth="104.0" text="Reset" />
-      <Button fx:id="Invite" layoutX="19.0" layoutY="173.0" mnemonicParsing="false" onAction="#InviteUser" prefHeight="25.0" prefWidth="133.0" text="Invite user" />
-      <Button fx:id="Invite" layoutX="65.0" layoutY="235.0" mnemonicParsing="false" onAction="#InviteUser" prefHeight="25.0" prefWidth="87.0" text="Invite user" />
-      <Button fx:id="AddorRemove" layoutX="29.0" layoutY="382.0" mnemonicParsing="false" onAction="#ChangeRoles" prefHeight="25.0" prefWidth="115.0" text="Add/Remove role" />
-      <Button fx:id="Listusers" layoutX="173.0" layoutY="173.0" mnemonicParsing="false" onAction="#ListUsers" prefHeight="25.0" prefWidth="142.0" text="List Users" />
-      <Button fx:id="Listusers" layoutX="65.0" layoutY="198.0" mnemonicParsing="false" onAction="#ListUsers" prefHeight="25.0" prefWidth="87.0" text="List Users" />
-      <Label fx:id="TitleLabel" layoutX="29.0" layoutY="20.0" prefHeight="98.0" prefWidth="466.0" text="Welcome to the Admin Page">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#dceb37" height="289.0" layoutX="-111.0" layoutY="-120.0" stroke="BLACK" strokeType="INSIDE" width="923.0" />
+      <Button fx:id="logoutbutton" layoutX="327.0" layoutY="542.0" mnemonicParsing="false" onAction="#logout" prefHeight="13.0" prefWidth="189.0" text="Logout" />
+      <Button fx:id="Reset" layoutX="621.0" layoutY="496.0" mnemonicParsing="false" onAction="#ResetUser" prefHeight="25.0" prefWidth="172.0" text="Reset" />
+      <Button fx:id="Invite" layoutX="26.0" layoutY="279.0" mnemonicParsing="false" onAction="#InviteUser" prefHeight="25.0" prefWidth="142.0" text="Invite user" />
+      <Button fx:id="Invite" layoutX="29.0" layoutY="248.0" mnemonicParsing="false" onAction="#InviteUser" prefHeight="25.0" prefWidth="142.0" text="Invite user" />
+      <Button fx:id="AddorRemove" layoutX="48.0" layoutY="496.0" mnemonicParsing="false" onAction="#ChangeRoles" prefHeight="25.0" prefWidth="172.0" text="Add/Remove role" />
+      <Button fx:id="Listusers" layoutX="28.0" layoutY="211.0" mnemonicParsing="false" onAction="#ListUsers" prefHeight="25.0" prefWidth="142.0" text="List Users" />
+      <Button fx:id="Listusers" layoutX="26.0" layoutY="315.0" mnemonicParsing="false" onAction="#ListUsers" prefHeight="25.0" prefWidth="142.0" text="List Users" />
+      <Label fx:id="TitleLabel" layoutX="154.0" prefHeight="108.0" prefWidth="467.0" text="Welcome to the Admin Page">
          <font>
             <Font size="32.0" />
          </font>
       </Label>
-      <Button fx:id="Delete" layoutX="337.0" layoutY="173.0" mnemonicParsing="false" onAction="#Delete" prefHeight="25.0" prefWidth="142.0" text="Delete Users" />
-      <Label layoutX="191.0" layoutY="105.0" text="Hello"/>
-      <Button fx:id="Delete" layoutX="65.0" layoutY="278.0" mnemonicParsing="false" onAction="#Delete" prefHeight="19.0" prefWidth="87.0" text="Delete Users" />
-      <Label layoutX="187.0" layoutY="105.0" text="Hello">
+      <Button fx:id="Delete" layoutX="26.0" layoutY="400.0" mnemonicParsing="false" onAction="#Delete" prefHeight="25.0" prefWidth="142.0" text="Delete Users" />
+      <Button fx:id="Delete" layoutX="26.0" layoutY="431.0" mnemonicParsing="false" onAction="#Delete" prefHeight="25.0" prefWidth="142.0" text="Delete Users" />
+      <Label layoutX="298.0" layoutY="86.0" prefHeight="27.0" prefWidth="79.0" text="Hello">
+         <font>
+            <Font size="22.0" />
+         </font>
+      </Label>
+      <Label fx:id="UserLabel" layoutX="421.0" layoutY="85.0" prefHeight="27.0" prefWidth="163.0" text="User">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Label>
+      <Label fx:id="UserLabel1" layoutX="19.0" layoutY="135.0" prefHeight="27.0" prefWidth="115.0" text="User Actions" />
+      <Label fx:id="UserLabel1" layoutX="28.0" layoutY="176.0" prefHeight="27.0" prefWidth="115.0" text="User Actions">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label fx:id="UserLabel" layoutX="245.0" layoutY="105.0" prefHeight="27.0" prefWidth="115.0" text="User">
+      <Label fx:id="UserLabel2" layoutX="388.0" layoutY="176.0" prefHeight="27.0" prefWidth="153.0" text="Article Actions">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label fx:id="UserLabel1" layoutX="19.0" layoutY="135.0" prefHeight="27.0" prefWidth="115.0" text="User Actions"/>
-      <Label fx:id="UserLabel1" layoutX="63.0" layoutY="162.0" prefHeight="27.0" prefWidth="115.0" text="User Actions">
+      <Button fx:id="Listusers1" layoutX="358.0" layoutY="302.0" mnemonicParsing="false" onAction="#ListArtices" prefHeight="25.0" prefWidth="172.0" text="List Articles" />
+      <Button fx:id="Listusers11" layoutX="358.0" layoutY="199.0" mnemonicParsing="false" onAction="#createArticle" prefHeight="25.0" prefWidth="172.0" text="Create Artilces" />
+      <Button fx:id="Article_delete" layoutX="358.0" layoutY="353.0" mnemonicParsing="false" onAction="#Article_delete" prefHeight="25.0" prefWidth="172.0" text="Delete Article" />
+      <Button fx:id="CreateHelpArticle" layoutX="584.0" layoutY="223.0" mnemonicParsing="false" onAction="#createHelpArticle" prefHeight="25.0" prefWidth="172.0" text="Create Help Article" />
+      <Button fx:id="HelpArticle_delete" layoutX="584.0" layoutY="340.0" mnemonicParsing="false" onAction="#HelpArticle_delete" prefHeight="25.0" prefWidth="172.0" text="Delete Help Article" />
+      <Label fx:id="UserLabel21" layoutX="599.0" layoutY="176.0" prefHeight="27.0" prefWidth="201.0" text="Help Article Actions">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label fx:id="UserLabel2" layoutX="19.0" layoutY="210.0" prefHeight="27.0" prefWidth="115.0" text="Article Actions">
+      <Button fx:id="ListHelpArticles" layoutX="584.0" layoutY="278.0" mnemonicParsing="false" onAction="#ListHelpArticles" prefHeight="25.0" prefWidth="172.0" text="List Help Article" />
+      <Button fx:id="Restore" layoutX="584.0" layoutY="406.0" mnemonicParsing="false" onAction="#restoreDeletedArticles" prefHeight="25.0" prefWidth="172.0" text="Restore Articles" />
+      <Button fx:id="Listusers1" layoutX="358.0" layoutY="266.0" mnemonicParsing="false" onAction="#ListArtices" prefHeight="25.0" prefWidth="172.0" text="List Articles" />
+      <Button fx:id="Listusers11" layoutX="358.0" layoutY="236.0" mnemonicParsing="false" onAction="#createArticle" prefHeight="25.0" prefWidth="172.0" text="Create Artilces" />
+      <Button fx:id="Article_delete" layoutX="358.0" layoutY="400.0" mnemonicParsing="false" onAction="#Article_delete" prefHeight="25.0" prefWidth="172.0" text="Delete Article" />
+      <Label fx:id="UserLabel11" layoutX="188.0" layoutY="176.0" prefHeight="27.0" prefWidth="115.0" text="Group actions">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="Listusers1" layoutX="173.0" layoutY="248.0" mnemonicParsing="false" onAction="#ListArtices" prefHeight="25.0" prefWidth="142.0" text="List Articles" />
-      <Button fx:id="Listusers11" layoutX="19.0" layoutY="248.0" mnemonicParsing="false" onAction="#createArticle" prefHeight="25.0" prefWidth="133.0" text="Create Artilces" />
-      <Button fx:id="Article_delete" layoutX="337.0" layoutY="248.0" mnemonicParsing="false" onAction="#Article_delete" prefHeight="25.0" prefWidth="142.0" text="Delete Article" />
-      <Button fx:id="CreateHelpArticle" layoutX="19.0" layoutY="315.0" mnemonicParsing="false" onAction="#createHelpArticle" prefHeight="25.0" prefWidth="133.0" text="Create Help Article" />
-      <Button fx:id="HelpArticle_delete" layoutX="337.0" layoutY="315.0" mnemonicParsing="false" onAction="#HelpArticle_delete" prefHeight="25.0" prefWidth="142.0" text="Delete Help Article" />
-      <Label fx:id="UserLabel21" layoutX="19.0" layoutY="281.0" prefHeight="27.0" prefWidth="189.0" text="Help Article Actions">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Button fx:id="ListHelpArticles" layoutX="173.0" layoutY="315.0" mnemonicParsing="false" onAction="#ListHelpArticles" prefHeight="25.0" prefWidth="142.0" text="List Help Article" />
-      <Button fx:id="Restore" layoutX="126.0" layoutY="349.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" onAction="#restoreDeletedArticles" text="Restore" />
-      <Button fx:id="Listusers1" layoutX="337.0" layoutY="198.0" mnemonicParsing="false" onAction="#ListArtices" prefHeight="25.0" prefWidth="93.0" text="List Articles" />
-      <Button fx:id="Listusers11" layoutX="337.0" layoutY="235.0" mnemonicParsing="false" onAction="#createArticle" text="Create Artilces" />
-      <Button fx:id="Article_delete" layoutX="337.0" layoutY="278.0" mnemonicParsing="false" onAction="#Article_delete" prefHeight="25.0" prefWidth="93.0" text="Delete Article" />
-      <Label fx:id="UserLabel11" layoutX="187.0" layoutY="162.0" prefHeight="27.0" prefWidth="115.0" text="Group actions">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Button fx:id="Listusers12" layoutX="198.0" layoutY="198.0" mnemonicParsing="false" onAction="#createGroup" prefHeight="25.0" prefWidth="93.0" text="Create Group" />
+      <Button fx:id="Listusers12" layoutX="199.0" layoutY="353.0" mnemonicParsing="false" onAction="#createGroup" prefHeight="25.0" prefWidth="142.0" text="Create Group" />
    </children>
 </AnchorPane>
