--- a/CSE_360_PROJECT/admin_Instructor/Admin_Instructor_Page.fxml
+++ b/CSE_360_PROJECT/admin_Instructor/Admin_Instructor_Page.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
@@ -31,7 +32,7 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="AddClass_Button" layoutX="323.0" layoutY="186.0" prefHeight="30.0" prefWidth="112.0" style="-fx-background-color: #c41088;" text="Add Class" textFill="WHITE" />
+      <Button fx:id="AddClass_Button" layoutX="323.0" layoutY="186.0" onAction="#AddClass_Button" prefHeight="30.0" prefWidth="112.0" style="-fx-background-color: #c41088;" text="Add Class" textFill="WHITE" />
       <Button fx:id="AddStudent_Button" layoutX="323.0" layoutY="234.0" onAction="#AddStudent_Button" prefHeight="30.0" prefWidth="112.0" style="-fx-background-color: #c41088;" text="Add Student" textFill="WHITE" />
 
       <!-- Remove Article Functions Section -->
@@ -45,5 +46,19 @@
 
       <!-- Logout Button -->
       <Button fx:id="logout_Button" layoutX="300.0" layoutY="362.0" onAction="#logout" prefHeight="25.0" prefWidth="158.0" style="-fx-background-color: #c41088;" text="Logout" textFill="WHITE" />
+      <HBox alignment="CENTER" layoutX="276.0" layoutY="106.0" prefHeight="43.0" prefWidth="168.0" spacing="10.0">
+         <children>
+            <Label text="Hello" textFill="WHITE">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label fx:id="UserLabel" text="Name" textFill="WHITE">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
