--- a/CSE_360_PROJECT/admin_Instructor/addClass.fxml
+++ b/CSE_360_PROJECT/admin_Instructor/addClass.fxml
@@ -6,18 +6,17 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="233.0" prefWidth="242.0" style="-fx-background-color: #f57e42;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="233.0" prefWidth="242.0" style="-fx-background-color: #f57e42;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admin_Instructor.AddClassController">
    <children>
       <Label layoutX="58.0" layoutY="32.0" text="Add Class" textFill="WHITE">
          <font>
             <Font size="29.0" />
          </font>
       </Label>
-      <TextField layoutX="47.0" layoutY="104.0" promptText="math,english" />
+      <TextField fx:id="className_TextField" layoutX="47.0" layoutY="104.0" promptText="math,english" />
       <Label layoutX="47.0" layoutY="87.0" text="Class name:" textFill="WHITE" />
       <Label layoutX="52.0" layoutY="141.0" text="Instructor:" textFill="WHITE" />
-      <TextField layoutX="47.0" layoutY="158.0" promptText="Must be valid instructor" />
-      <Button alignment="CENTER" layoutX="87.0" layoutY="194.0" mnemonicParsing="false" style="-fx-background-color: #7d4325;" text="Add Class" textAlignment="CENTER" textFill="WHITE" />
+      <TextField fx:id="InstructorName_TextField" layoutX="47.0" layoutY="158.0" promptText="Must be valid instructor" />
+      <Button alignment="CENTER" layoutX="87.0" layoutY="194.0" mnemonicParsing="false" onAction="#addClass" style="-fx-background-color: #7d4325;" text="Add Class" textAlignment="CENTER" textFill="WHITE" />
    </children>
 </AnchorPane>
