--- a/CSE_360_PROJECT/InstructorPage/Instructor.fxml
+++ b/CSE_360_PROJECT/InstructorPage/Instructor.fxml
@@ -35,7 +35,7 @@
          </font>
       </Label>
       <Button fx:id="CreateHelpArticle" layoutX="12.0" layoutY="314.0" mnemonicParsing="false" onAction="#createHelpArticle" prefHeight="26.0" prefWidth="93.0" text="Create Articles" />
-      <Button fx:id="HelpArticle_Delete" layoutX="12.0" layoutY="412.0" mnemonicParsing="false" onAction="#HelpArticle_delete" prefHeight="26.0" prefWidth="93.0" text="Delete Articles" />
+      <Button fx:id="HelpArticle_Delete1" layoutX="12.0" layoutY="412.0" mnemonicParsing="false" onAction="#HelpArticle_delete1" prefHeight="26.0" prefWidth="93.0" text="Delete Articles" />
       <Button fx:id="ListHelpArticles" layoutX="10.0" layoutY="259.0" mnemonicParsing="false" onAction="#ListHelpArticles" prefHeight="26.0" prefWidth="98.0" text="View Articles" />
       <Label layoutX="149.0" layoutY="211.0" prefHeight="27.0" prefWidth="163.0" text="General Articles:">
          <font>
