--- a/CSE_360_PROJECT/StudentPage/application.css
+++ b/CSE_360_PROJECT/StudentPage/application.css
@@ -1,16 +1,14 @@
+/* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+
 .root{
 	
-	-fx-backround-color:"orange";
+	-fx-background-color:D53730;
+	
 }
+.label{
+	 -fx-alignment: center;
+	-fx-font-family: "Calibri";
+	-fx-font-weight: bold;
 
-
-
-
-
-
-
-
-
-
-
-/* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+	
+}
