--- a/CSE_360_PROJECT/admin_Instructor/Admin_Instructor_Page.fxml
+++ b/CSE_360_PROJECT/admin_Instructor/Admin_Instructor_Page.fxml
@@ -10,7 +10,8 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="408.0" prefWidth="780.0" style="-fx-background-color: dab2d8;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admin_Instructor.Admin_Instructor_Controller">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6f0e6a" height="200.0" layoutX="-5.0" layoutY="-51.0" width="799.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#9a3995" height="200.0" layoutX="-3.0" layoutY="-15.0" width="799.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6f0e6a" height="200.0" layoutX="-11.0" layoutY="-51.0" width="815.0" />
       <Label fx:id="TitleLabel" layoutX="63.0" layoutY="23.0" prefHeight="123.0" prefWidth="684.0" style="-fx-text-fill: white;" text="Welcome to the Admin Instructors home page">
          <font>
             <Font name="System Bold" size="29.0" />
@@ -23,20 +24,20 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Button fx:id="createHelpArticles_button" layoutX="15.0" layoutY="192.0" mnemonicParsing="false" onAction="#createArticle" stylesheets="@application.css" text="Create Help Article" textFill="WHITE">
+      <Button fx:id="createHelpArticles_button" layoutX="15.0" layoutY="195.0" mnemonicParsing="false" onAction="#createArticle" stylesheets="@application.css" text="Create Help Article" textFill="WHITE">
          <opaqueInsets>
             <Insets />
          </opaqueInsets></Button>
-      <Button fx:id="deleteHelpArticles_button" layoutX="15.0" layoutY="234.0" mnemonicParsing="false" onAction="#Article_delete" stylesheets="@application.css" text="Delete Help Article" textFill="WHITE" />
-      <Button fx:id="restoreHelpArticles_button" layoutX="15.0" layoutY="279.0" mnemonicParsing="false" stylesheets="@application.css" text="Restore Help Article" textFill="WHITE" />
+      <Button fx:id="deleteHelpArticles_button" layoutX="15.0" layoutY="237.0" mnemonicParsing="false" onAction="#Article_delete" stylesheets="@application.css" text="Delete Help Article" textFill="WHITE" />
+      <Button fx:id="restoreHelpArticles_button" layoutX="12.0" layoutY="278.0" mnemonicParsing="false" stylesheets="@application.css" text="Restore Help Article" textFill="WHITE" />
 
       <!-- General Groups Functions Section -->
-      <Label layoutX="276.0" layoutY="146.0" style="-fx-text-fill: white;" text="General Groups Functions">
+      <Label layoutX="270.0" layoutY="149.0" style="-fx-text-fill: white;" text="General Groups Functions">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Button fx:id="AddClass_Button" layoutX="323.0" layoutY="186.0" onAction="#AddClass_Button" prefHeight="30.0" prefWidth="112.0" stylesheets="@application.css" text="Add Class" textFill="WHITE" />
+      <Button fx:id="AddClass_Button" layoutX="323.0" layoutY="192.0" onAction="#AddClass_Button" prefHeight="30.0" prefWidth="112.0" stylesheets="@application.css" text="Add Class" textFill="WHITE" />
       <Button fx:id="AddStudent_Button" layoutX="323.0" layoutY="234.0" onAction="#AddStudent_Button" prefHeight="30.0" prefWidth="112.0" stylesheets="@application.css" text="Add Student" textFill="WHITE" />
 
       <!-- Remove Article Functions Section -->
@@ -45,8 +46,8 @@
             <Font name="System Bold" size="19.0" />
          </font>
       </Label>
-      <Button fx:id="RemoveStudent_Button" layoutX="587.0" layoutY="192.0" prefHeight="30.0" prefWidth="132.0" stylesheets="@application.css" text="Remove Student" textFill="WHITE" />
-      <Button fx:id="RemoveClass_Button" layoutX="587.0" layoutY="234.0" prefHeight="30.0" prefWidth="132.0" stylesheets="@application.css" text="Remove Class" textFill="WHITE" />
+      <Button fx:id="RemoveStudent_Button" layoutX="587.0" layoutY="192.0" onAction="#RemoveStudent_Button" prefHeight="30.0" prefWidth="132.0" stylesheets="@application.css" text="Remove Student" textFill="WHITE" />
+      <Button fx:id="RemoveClass_Button" layoutX="587.0" layoutY="234.0" onAction="#removeClass" prefHeight="30.0" prefWidth="132.0" stylesheets="@application.css" text="Remove Class" textFill="WHITE" />
 
       <!-- Logout Button -->
       <Button fx:id="logout_Button" layoutX="300.0" layoutY="362.0" onAction="#logout" prefHeight="25.0" prefWidth="158.0" stylesheets="@application.css" text="Logout" textFill="WHITE" />
@@ -79,7 +80,7 @@
             </Label>
          </children>
       </HBox>
-      <Button fx:id="listClassesButton" layoutX="166.0" layoutY="360.0" prefHeight="30.0" prefWidth="112.0" stylesheets="@application.css" text="List classes" textFill="WHITE" />
+      <Button fx:id="listClassesButton" layoutX="166.0" layoutY="360.0" onAction="#ListClasses" prefHeight="30.0" prefWidth="112.0" stylesheets="@application.css" text="List classes" textFill="WHITE" />
       <Button fx:id="listStudentsButton" layoutX="475.0" layoutY="360.0" prefHeight="30.0" prefWidth="179.0" stylesheets="@application.css" text="List students" textFill="WHITE" />
    </children>
 </AnchorPane>
