--- a/CSE_360_PROJECT/admin_Instructor/addStudentoClass.fxml
+++ b/CSE_360_PROJECT/admin_Instructor/addStudentoClass.fxml
@@ -13,7 +13,7 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Button layoutX="58.0" layoutY="253.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="177.0" text="Add to Class" />
+      <Button layoutX="58.0" layoutY="253.0" mnemonicParsing="false" onAction="#AddStudentToClass" prefHeight="36.0" prefWidth="177.0" text="Add to Class" />
       <ChoiceBox fx:id="class_ChoiceBox" layoutX="71.0" layoutY="116.0" prefWidth="150.0" />
       <ChoiceBox fx:id="student_ChoiceBox" layoutX="71.0" layoutY="181.0" prefWidth="150.0" />
       <Label layoutX="71.0" layoutY="99.0" text="Select a class:" />
