--- a/CSE_360_PROJECT/InstructorPage/Instructor.fxml
+++ b/CSE_360_PROJECT/InstructorPage/Instructor.fxml
@@ -7,13 +7,13 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="studentspage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="647.0" style="-fx-background-color: #34eb49;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InstructorPage.InstructorPageController">
+<AnchorPane fx:id="studentspage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="519.0" prefWidth="975.0" style="-fx-background-color: #34eb49;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InstructorPage.InstructorPageController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#16c42a" height="178.0" layoutX="-41.0" layoutY="14.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="511.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#169425" height="208.0" layoutY="-17.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="647.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#169425" height="233.0" layoutY="-17.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="975.0" />
       <Button layoutX="159.0" layoutY="412.0" mnemonicParsing="false" onAction="#Article_delete" prefHeight="26.0" prefWidth="98.0" stylesheets="@application.css" text="Delete Articles" textFill="WHITE" />
-      <Button fx:id="InstructorLoout" layoutX="205.0" layoutY="473.0" mnemonicParsing="false" onAction="#logout" prefHeight="35.0" prefWidth="216.0" stylesheets="@application.css" text="Log out" textFill="WHITE" />
-      <Label fx:id="TitleLabel" layoutX="69.0" layoutY="38.0" prefHeight="35.0" prefWidth="532.0" text="            Welcome to the Instructor View" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="InstructorLoout" layoutX="362.0" layoutY="466.0" mnemonicParsing="false" onAction="#logout" prefHeight="48.0" prefWidth="260.0" stylesheets="@application.css" text="Log out" textFill="WHITE" />
+      <Label fx:id="TitleLabel" layoutX="69.0" layoutY="38.0" prefHeight="59.0" prefWidth="904.0" text="                                      Welcome to the Instructor View" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
@@ -33,8 +33,8 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Button fx:id="back_up_Article" layoutX="503.0" layoutY="272.0" mnemonicParsing="false" onAction="#back_up_Article" stylesheets="@application.css" text="Back Up Articles" textFill="WHITE" />
-      <Button fx:id="Restore_Article" layoutX="505.0" layoutY="327.0" mnemonicParsing="false" onAction="#Restore_Article" stylesheets="@application.css" text="Restore Articles" textFill="WHITE" />
+      <Button fx:id="back_up_Article" layoutX="861.0" layoutY="348.0" mnemonicParsing="false" onAction="#back_up_Article" stylesheets="@application.css" text="Back Up Articles" textFill="WHITE" />
+      <Button fx:id="Restore_Article" layoutX="862.0" layoutY="273.0" mnemonicParsing="false" onAction="#Restore_Article" stylesheets="@application.css" text="Restore Articles" textFill="WHITE" />
       <Button fx:id="Edit_articlesbutton" layoutX="162.0" layoutY="360.0" mnemonicParsing="false" onAction="#Edit_articlesbutton" prefHeight="26.0" prefWidth="93.0" stylesheets="@application.css" text="Edit Articles" textFill="WHITE" />
       <Button fx:id="EditHelpArticles" layoutX="10.0" layoutY="360.0" mnemonicParsing="false" onAction="#EditHelpArticles" prefHeight="26.0" prefWidth="98.0" stylesheets="@application.css" text="Edit Articles" textFill="WHITE" />
       <Label layoutX="300.0" layoutY="207.0" prefHeight="35.0" prefWidth="206.0" text="Special Access Articles">
@@ -46,7 +46,7 @@
       <Button fx:id="CreateArticlesButton_Special_Access" layoutX="322.0" layoutY="315.0" mnemonicParsing="false" onAction="#CreateArticlesButton_Special_Access" stylesheets="@application.css" text="Create Articles" textFill="WHITE" />
       <Button fx:id="Edit_articlesbutton_Special_Access" layoutX="322.0" layoutY="360.0" mnemonicParsing="false" onAction="#Edit_articlesbutton_Special_Access" prefHeight="26.0" prefWidth="93.0" stylesheets="@application.css" text="Edit Articles" textFill="WHITE" />
       <Button layoutX="319.0" layoutY="412.0" mnemonicParsing="false" onAction="#Article_delete_Special_Access" prefHeight="26.0" prefWidth="98.0" stylesheets="@application.css" text="Delete Articles" textFill="WHITE" />
-      <HBox alignment="CENTER" layoutX="219.0" layoutY="135.0" prefHeight="35.0" prefWidth="200.0" spacing="10.0">
+      <HBox alignment="CENTER" layoutX="392.0" layoutY="129.0" prefHeight="35.0" prefWidth="200.0" spacing="10.0">
          <children>
             <Label text="Hello" textFill="WHITE">
                <font>
@@ -60,5 +60,21 @@
             </Label>
          </children>
       </HBox>
+      <Label layoutX="526.0" layoutY="212.0" prefHeight="27.0" prefWidth="151.0" text="Help System">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="704.0" layoutY="212.0" prefHeight="27.0" prefWidth="151.0" text="General Groups">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Label>
+      <Button fx:id="Add_Student_ToHelpSystem" layoutX="517.0" layoutY="260.0" mnemonicParsing="false" onAction="#Add_Student_ToHelpSystem" prefHeight="26.0" prefWidth="102.0" stylesheets="@application.css" text="Add Students" textFill="WHITE" />
+      <Button fx:id="Add_Student_ToGeneral" layoutX="719.0" layoutY="260.0" mnemonicParsing="false" onAction="#Add_Student_ToGeneralgroup" prefHeight="26.0" prefWidth="93.0" stylesheets="@application.css" text="Add Students" textFill="WHITE" />
+      <Button fx:id="DeleteStudents_from_helpsystem" layoutX="517.0" layoutY="314.0" mnemonicParsing="false" onAction="#DeleteStudents_from_helpsystem" prefHeight="26.0" prefWidth="102.0" stylesheets="@application.css" text="Delete Students" textFill="WHITE" />
+      <Button fx:id="ViewStudents_from_helpsystem" layoutX="517.0" layoutY="360.0" mnemonicParsing="false" onAction="#ViewStudents_from_helpsystem" prefHeight="26.0" prefWidth="102.0" stylesheets="@application.css" text="View Students" textFill="WHITE" />
+      <Button fx:id="delete_Student_fromGeneralgroup" layoutX="715.0" layoutY="315.0" mnemonicParsing="false" onAction="#delete_Student_fromGeneralgroup" prefHeight="26.0" prefWidth="102.0" stylesheets="@application.css" text="Delete Students" textFill="WHITE" />
+      <Button fx:id="view_from_general_group" layoutX="715.0" layoutY="360.0" mnemonicParsing="false" onAction="#view_from_general_group" prefHeight="26.0" prefWidth="102.0" stylesheets="@application.css" text="View Students" textFill="WHITE" />
    </children>
 </AnchorPane>
