--- a/CSE_360_PROJECT/StudentPage/Student.fxml
+++ b/CSE_360_PROJECT/StudentPage/Student.fxml
@@ -25,5 +25,12 @@
       </Label>
      <Button fx:id="searchButton" layoutX="188.0" layoutY="364.0" mnemonicParsing="false" onAction="#loadSearchArticlesPage" text="View Article" />
       <Button layoutX="302.0" layoutY="364.0" mnemonicParsing="false" onAction="#ListArtilces" text="List Articles" />
+      <Button fx:id="Generic_Messgage" layoutX="140.0" layoutY="236.0" mnemonicParsing="false" onAction="#Generic_Messgage" text="Send Generic Message" />
+      <Button fx:id="Specific_Message" layoutX="321.0" layoutY="236.0" mnemonicParsing="false" onAction="#Specific_Messgage" text="Send Specific Message" />
+      <Label layoutX="17.0" layoutY="231.0" prefHeight="35.0" prefWidth="154.0" text="Messgaes: ">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
